# pytest-result-sender

./: .flake8  .gitignore  pyproject.toml  pytest.ini
src/pytest_result_sender/: plugin.py
tests/: test_demons.py
